2006-10-04  Akim Demaille  <akim@lrde.epita.fr>

	Simplify delete invocations.

	* ucommand.cc: "delete(\(.*?\))" -> "delete \1".
	"if *(\(.*?\)) *\(delete \1\)" -> "\2".
	* utypes.h: Ditto.
	* uvariablelist.cc: Ditto.
	* ufunction.cc: Ditto.
	* ucallid.cc: Ditto.
	* uexpression.cc: Ditto.
	* unamedparameters.cc: Ditto.
	* uvalue.cc: Ditto.
	* ubinary.cc: Ditto.
	* uproperty.cc: Ditto.
	* uvariable.cc: Ditto.
	* uobj.cc: Ditto.
	* ugroup.cc: Ditto.
	* uconnection.cc: Ditto.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	inline ucopy.
	* ucommand.cc: Do it.
	* uvariablename.cc: Use it.
	This should fix some memory leak: before we were making copies
	that are not always used.
	delete 0 is valid C++.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* uvariablename.cc, uvalue.cc: Do that.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Clean up.
	* ucommand.cc: Lots of formatting changes.
	Don't abuse of parens, know your precedences.
	delete 0 is valid C++.
	(ucopy): New.
	Use it.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* uobject/uobject.cc: Do that.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Catch up with uobject.h.
	* ucommand.cc, uobject/uobject.cc, uobject/uvar.cc:
	Various indentation fixes.
	Various warning fixes.
	Catch up with const-ref uses for std::string in uobject.h.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	Use URBI_*.
	* configure.ac: Use URBI_PROG_CXX, and URBI_DOC.
	Use AC_ENABLE_SHARED.

2006-10-03  Akim Demaille  <demaille@gostai.com>

	* build-aux, bootstrap: Remove.
	Now replaced with svn:externals.

2006-10-03  matthieu nottale  <nottale@gostai.com>

	New nonfree banner. Fix leak.

	* ubanner.cc: New message that doesn't say urbikernel is free.
	* uobject/uvar.cc: Fix a leak: delete vardata in uvar dtor.

2006-09-29  Matthieu Nottale  <nottale@gostai.com>

	Fix bison.mk incorrect path

	* parser/bison/bison.mk: Fix utoken.cc path.
